Added handling in the combat macro for aiming and related bonuses. This includes the extended aiming table from TS 26, and a check to see if the actor has the Deadeye trait.

--- a/templates/item/Equipment-sheet.html
+++ b/templates/item/Equipment-sheet.html
@@ -170,6 +170,7 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
                             </span>
@@ -275,6 +276,7 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
                             </span>
@@ -415,6 +417,7 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
                             </span>
