--- a/templates/item/Ritual-sheet.html
+++ b/templates/item/Ritual-sheet.html
@@ -789,6 +789,7 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
                             </span>
@@ -894,6 +895,7 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
                             </span>
@@ -1034,6 +1036,7 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
                             </span>
