--- a/templates/item/Spell-sheet.html
+++ b/templates/item/Spell-sheet.html
@@ -253,6 +253,7 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
                             </span>
@@ -358,6 +359,7 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
                             </span>
@@ -498,6 +500,7 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
                             </span>
