--- a/templates/item/Trait-sheet.html
+++ b/templates/item/Trait-sheet.html
@@ -158,6 +158,7 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
                             </span>
@@ -263,6 +264,7 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
                             </span>
@@ -403,6 +405,7 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
                             </span>
