#118 - Added rules to handle the -3 penalty for unarmed parries that are not Judo or Karate vs armed swings.

--- a/templates/item/Ritual-sheet.html
+++ b/templates/item/Ritual-sheet.html
@@ -785,6 +785,7 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        sw: Swing (Should be treated as a swing)<br>
                                         agp: Aggressive Parry<br>
                                         kik: Kick<br>
                                         gui: Guided<br>
@@ -891,6 +892,7 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        sw: Swing (Should be treated as a swing)<br>
                                         agp: Aggressive Parry<br>
                                         kik: Kick<br>
                                         gui: Guided<br>
@@ -1032,6 +1034,7 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        sw: Swing (Should be treated as a swing)<br>
                                         agp: Aggressive Parry<br>
                                         kik: Kick<br>
                                         gui: Guided<br>
