--- a/templates/item/Spell-sheet.html
+++ b/templates/item/Spell-sheet.html
@@ -249,6 +249,7 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        sw: Swing (Should be treated as a swing)<br>
                                         agp: Aggressive Parry<br>
                                         kik: Kick<br>
                                         gui: Guided<br>
@@ -355,6 +356,7 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        sw: Swing (Should be treated as a swing)<br>
                                         agp: Aggressive Parry<br>
                                         kik: Kick<br>
                                         gui: Guided<br>
@@ -496,6 +498,7 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        sw: Swing (Should be treated as a swing)<br>
                                         agp: Aggressive Parry<br>
                                         kik: Kick<br>
                                         gui: Guided<br>
