--- a/templates/item/Equipment-sheet.html
+++ b/templates/item/Equipment-sheet.html
@@ -166,6 +166,7 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        sw: Swing (Should be treated as a swing)<br>
                                         agp: Aggressive Parry<br>
                                         kik: Kick<br>
                                         gui: Guided<br>
@@ -272,6 +273,7 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        sw: Swing (Should be treated as a swing)<br>
                                         agp: Aggressive Parry<br>
                                         kik: Kick<br>
                                         gui: Guided<br>
@@ -413,6 +415,7 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        sw: Swing (Should be treated as a swing)<br>
                                         agp: Aggressive Parry<br>
                                         kik: Kick<br>
                                         gui: Guided<br>
