--- a/templates/item/Trait-sheet.html
+++ b/templates/item/Trait-sheet.html
@@ -154,6 +154,7 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        sw: Swing (Should be treated as a swing)<br>
                                         agp: Aggressive Parry<br>
                                         kik: Kick<br>
                                         gui: Guided<br>
@@ -260,6 +261,7 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        sw: Swing (Should be treated as a swing)<br>
                                         agp: Aggressive Parry<br>
                                         kik: Kick<br>
                                         gui: Guided<br>
@@ -401,6 +403,7 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        sw: Swing (Should be treated as a swing)<br>
                                         agp: Aggressive Parry<br>
                                         kik: Kick<br>
                                         gui: Guided<br>
